fix: delete extra space

--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -25,7 +25,6 @@
     text-align: center;
     font-size: 14px;
     line-height: 17px;
-    text-align: center;
     align-self: center;
   }
 }
